@@ -59,10 +59,6 @@ struct sinfo_parameters params;
 
 static int g_node_scaling = 1;
 
-#ifdef HAVE_BG
-static int cpus_per_node = 1;
-#endif
-
 /************
  * Funtions *
  ************/
@@ -76,7 +72,7 @@ static sinfo_data_t *_create_sinfo(partition_info_t* part_ptr,
 static bool _filter_out(node_info_t *node_ptr);
 static void _sinfo_list_delete(void *data);
 static bool _match_node_data(sinfo_data_t *sinfo_ptr,
-                             node_info_t *node_ptr);
+                             node_info_t *node_ptr, uint32_t node_scaling);
 static bool _match_part_data(sinfo_data_t *sinfo_ptr,
                              partition_info_t* part_ptr);
 static int  _query_server(partition_info_msg_t ** part_pptr,
@@ -334,10 +330,6 @@ static int _build_sinfo_data(List sinfo_list,
 
 	g_node_scaling = node_msg->node_scaling;
 
-#ifdef HAVE_BG
-	cpus_per_node = node_msg->node_array[0].cpus / g_node_scaling;
-#endif
-
 	/* by default every partition is shown, even if no nodes */
 	if ((!params.node_flag) && params.match_flags.partition_flag) {
 		part_ptr = partition_msg->partition_array;
@@ -517,7 +509,7 @@ static void _sort_hostlist(List sinfo_list)
 }
 
 static bool _match_node_data(sinfo_data_t *sinfo_ptr,
-                             node_info_t *node_ptr)
+                             node_info_t *node_ptr, uint32_t node_scaling)
 {
 	if (sinfo_ptr->nodes &&
 	    params.match_flags.features_flag &&
@@ -543,7 +535,7 @@ static bool _match_node_data(sinfo_data_t *sinfo_ptr,
 		return true;
 
 	if (params.match_flags.cpus_flag &&
-	    (node_ptr->cpus        != sinfo_ptr->min_cpus))
+	    ((node_ptr->cpus / node_scaling) != sinfo_ptr->min_cpus))
 		return false;
 	if (params.match_flags.sockets_flag &&
 	    (node_ptr->sockets     != sinfo_ptr->min_sockets))
@@ -631,6 +623,9 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr,
 	uint16_t base_state;
 	uint16_t used_cpus = 0, error_cpus = 0;
 	int total_cpus = 0, total_nodes = 0;
+	/* since node_scaling could be less here we need to use the
+	   global node scaling which should never change. */
+	int single_node_cpus = (node_ptr->cpus / g_node_scaling);
 
  	base_state = node_ptr->node_state & NODE_STATE_BASE;
 
@@ -640,8 +635,8 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr,
 		sinfo_ptr->reason     = node_ptr->reason;
 		sinfo_ptr->reason_time= node_ptr->reason_time;
 		sinfo_ptr->reason_uid = node_ptr->reason_uid;
-		sinfo_ptr->min_cpus   = node_ptr->cpus;
-		sinfo_ptr->max_cpus   = node_ptr->cpus;
+		sinfo_ptr->min_cpus   = single_node_cpus;
+		sinfo_ptr->max_cpus   = single_node_cpus;
 		sinfo_ptr->min_sockets = node_ptr->sockets;
 		sinfo_ptr->max_sockets = node_ptr->sockets;
 		sinfo_ptr->min_cores   = node_ptr->cores;
@@ -659,10 +654,10 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr,
 		 * just return, don't duplicate */
 		return;
 	} else {
-		if (sinfo_ptr->min_cpus > node_ptr->cpus)
-			sinfo_ptr->min_cpus = node_ptr->cpus;
-		if (sinfo_ptr->max_cpus < node_ptr->cpus)
-			sinfo_ptr->max_cpus = node_ptr->cpus;
+		if (sinfo_ptr->min_cpus > single_node_cpus)
+			sinfo_ptr->min_cpus = single_node_cpus;
+		if (sinfo_ptr->max_cpus < single_node_cpus)
+			sinfo_ptr->max_cpus = single_node_cpus;
 
 		if (sinfo_ptr->min_sockets > node_ptr->sockets)
 			sinfo_ptr->min_sockets = node_ptr->sockets;
@@ -716,21 +711,22 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr,
 		sinfo_ptr->reason_time= node_ptr->reason_time;
 		sinfo_ptr->reason_uid = node_ptr->reason_uid;
 	}
-	if(params.match_flags.cpus_flag && (used_cpus || error_cpus)) {
-		/* we only get one shot at this (because the node name
-		   is the same), so we need to make
-		   sure we get all the subgrps accounted for here */
+	if(!params.match_flags.state_flag && (used_cpus || error_cpus)) {
+		/* We only get one shot at this (because all states
+		   are combined together), so we need to make
+		   sure we get all the subgrps accounted. (So use
+		   g_node_scaling for safe measure) */
 		total_nodes = g_node_scaling;
 
 		sinfo_ptr->nodes_alloc += used_cpus;
 		sinfo_ptr->nodes_other += error_cpus;
 		sinfo_ptr->nodes_idle +=
 			(total_nodes - (used_cpus + error_cpus));
-		used_cpus *= cpus_per_node;
-		error_cpus *= cpus_per_node;
+		used_cpus *= single_node_cpus;
+		error_cpus *= single_node_cpus;
 	} else {
 		/* process only for this subgrp and then return */
-		total_cpus = total_nodes * cpus_per_node;
+		total_cpus = total_nodes * single_node_cpus;
 
 		if ((base_state == NODE_STATE_ALLOCATED)
 		    ||  (node_ptr->node_state & NODE_STATE_COMPLETING)) {
@@ -774,9 +770,10 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr,
 	} else
 		sinfo_ptr->cpus_idle += total_cpus;
 
-/* 	info("count is now %d %d %d %d",  */
-/* 	     sinfo_ptr->cpus_alloc, sinfo_ptr->cpus_idle, */
-/* 	     sinfo_ptr->cpus_other, sinfo_ptr->cpus_total); */
+	/* info("count is now %d %d %d %d %d", */
+	/*      sinfo_ptr->cpus_alloc, sinfo_ptr->cpus_idle, */
+	/*      sinfo_ptr->cpus_other, sinfo_ptr->cpus_total, */
+	/*      sinfo_ptr->nodes_total); */
 }
 
 static int _insert_node_ptr(List sinfo_list, uint16_t part_num,
@@ -792,7 +789,7 @@ static int _insert_node_ptr(List sinfo_list, uint16_t part_num,
 		if (!_match_part_data(sinfo_ptr, part_ptr))
 			continue;
 		if (sinfo_ptr->nodes_total &&
-		    (!_match_node_data(sinfo_ptr, node_ptr)))
+		    (!_match_node_data(sinfo_ptr, node_ptr, node_scaling)))
 			continue;
 		_update_sinfo(sinfo_ptr, node_ptr, node_scaling);
 		break;
